--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.12.1"
+    "react-image-zoom": "^1.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.12.1",
+    "react-zoom-pan-pinch": "^3.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
