--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-image-zoom": "^1.3.1",
     "react-leaflet": "^4.2.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.12.1",
     "react-zoom-pan-pinch": "^3.0.8"
   },
@@ -26,10 +27,10 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.25.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "gh-pages": "^5.0.0",
+    "gh-pages": "^3.0.0",
     "vite": "^4.3.9"
   }
 }
