--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "leaflet": "^1.9.4",
+    "mongodb": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-zoom": "^1.3.1",
