--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "firebase": "^9.23.0",
     "leaflet": "^1.9.4",
-    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-zoom": "^1.3.1",
