teste limitar por ips

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-  "routes": [
-    {
-      "src": "/(.*)",
-      "headers": {
-        "Access-Control-Allow-Origin": "192.168.2.108"
-      },
-      "dest": "/index.html"
-    }
+  "rewrites":  [
+    {"source": "/(.*)", "destination": "/"}
   ]
 }
